# orbit-tauri-tools

./: .gitignore  LICENSE  Makefile  README.md
.github/scripts/: import-apple-cert.sh  prepare-release-assets.sh  retry.sh  verify-release-version.sh
.github/workflows/: release.yml
app/: .env.development  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  plugin_session.rs  plugin_session_http.rs  youtube_login.rs
app/src/lib/: feed.ts  (+83 more)
docs/html/: omnireader_web_application.tsx  插件导入.tsx
docs/方案/: rss-plugin.md  图床上传.md  实施方案1.md  版本更新.md
docs/更新说明/: v1.0.0.md  v1.1.0.md
orbit-plugins/: Makefile  README.md
orbit-plugins/schemas/: abi-v1.md  browser-preview.md  manifest.wasm.schema.json
orbit-plugins/scripts/: dev-loop.sh  try.sh
orbit-plugins/sdk/: go.mod  run.go  types.go
plugins/juejin/: manifest.json  plugin.wasm
plugins/techcrunch-rss/: manifest.json
plugins/verge-rss/: manifest.json
runtime/: go.mod  go.sum  openapi.json
scripts/: build-linux-app.sh  build-macos-app.sh  build-runtime-macos.sh  build-runtime.sh  build-windows-app.sh  bump-version.sh  create-macos-dmg.sh  dev-all.sh  dev-go.sh  prepare-app-icon.sh  release-retag.sh  release.sh  signing.env.example  tauri-before-build.sh
(+193 files in other folders)
