[package]
name = "orbit-reader"
version = "1.1.3"
description = "Orbit Reader desktop shell"
authors = ["Orbit"]
edition = "2021"

[lib]
name = "orbit_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "net", "io-util", "rt-multi-thread", "macros", "sync"] }
url = "2"
cookie = "0.18"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
